fixed align items for base footer

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -60,6 +60,7 @@
 		flex-wrap: wrap;
 		width: 95%;
 		justify-content: center;
+		align-items: first baseline;
 	}
 
 	.basefooter li + li::before {
